[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenesRandom/panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenesRandom/backgroundButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Settings.gd" type="Script" id=3]
[ext_resource path="res://Assets/diversos/button/buttonR.png" type="Texture" id=4]
[ext_resource path="res://Assets/Photo/flag_US.jpg" type="Texture" id=5]
[ext_resource path="res://Assets/Photo/brazilflag.png" type="Texture" id=6]
[ext_resource path="res://Assets/Photo/japanFlag.png" type="Texture" id=7]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
margin_bottom = 3.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" parent="." instance=ExtResource( 1 )]
position = Vector2( 440.257, 236.695 )

[node name="BackButton" type="Button" parent="."]
margin_left = 48.0
margin_top = 48.0
margin_right = 128.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 0.929412, 0.054902, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.243137, 0.964706, 0.0156863, 1 )
text = "btn_back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="BackButton"]
show_behind_parent = true
position = Vector2( 39.3416, 16.92 )
scale = Vector2( 1.20887, 1.87307 )
texture = ExtResource( 4 )

[node name="SupportButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 144.0
margin_right = 480.0
margin_bottom = 180.0
text = "btn_support"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="SupportButton"]
show_behind_parent = true
position = Vector2( 75.8108, 18.8108 )
scale = Vector2( 1.7, 2.4 )
texture = ExtResource( 4 )

[node name="FeedbackButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 240.0
margin_right = 480.0
margin_bottom = 276.0
mouse_default_cursor_shape = 2
text = "btn_feedback"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" parent="FeedbackButton" instance=ExtResource( 2 )]
position = Vector2( 80.2293, 17.9336 )

[node name="LanguageButton" type="TextureButton" parent="."]
margin_left = 280.0
margin_top = 368.0
margin_right = 344.0
margin_bottom = 416.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LanguageButton2" type="TextureButton" parent="."]
margin_left = 360.0
margin_top = 368.0
margin_right = 424.0
margin_bottom = 416.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LanguageButtonJA" type="TextureButton" parent="."]
margin_left = 440.0
margin_top = 368.0
margin_right = 504.0
margin_bottom = 416.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 352.0
margin_top = 48.0
margin_right = 448.0
margin_bottom = 78.0
text = "btn_setting"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 320.0
margin_top = 336.0
margin_right = 480.0
margin_bottom = 350.0
text = "btn_language"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="FeedbackButton" to="." method="_on_FeedbackButton_pressed"]
[connection signal="pressed" from="LanguageButton" to="." method="_on_LanguageButton_pressed"]
[connection signal="pressed" from="LanguageButton2" to="." method="_on_LanguageButton2_pressed"]
[connection signal="pressed" from="LanguageButtonJA" to="." method="_on_LanguageButtonJA_pressed"]
